--- a/.sast/action.yml
+++ b/.sast/action.yml
@@ -4,7 +4,7 @@ inputs:
   application:  # id of input
     required: true
   sandbox:
-    default: ${{ github.ref.name }}
+    required: true
 outputs:
   random-number:
     value: 'Sandbox named "toto" is created... '
