--- a/.sast/action.yml
+++ b/.sast/action.yml
@@ -9,7 +9,7 @@ inputs:
     required: true
 outputs:
   random-number:
-    value: 'Sandbox named "toto" is created... '
+    value: 'Sandbox action has been done. '
 runs:
   using: "composite"
   steps:
